--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ajv": "^8.6.3",
     "ajv-keywords": "^5.0.0",
     "bootstrap": "^5.1.3",
+    "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
