--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ngneat/input-mask": "^3.0.4",
     "@popperjs/core": "^2.10.2",
     "ajv": "^8.6.3",
     "ajv-keywords": "^5.0.0",
     "bootstrap": "^5.1.3",
+    "inputmask": "5.0.5",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -31,6 +33,7 @@
     "@angular-devkit/build-angular": "~12.2.5",
     "@angular/cli": "~12.2.5",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/inputmask": "5.0.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
