--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ajv": "^8.6.3",
     "ajv-keywords": "^5.0.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.0",
     "inputmask": "5.0.5",
     "ngx-bootstrap": "^7.1.0",
     "rxjs": "~6.6.0",
